--- a/photographer.html
+++ b/photographer.html
@@ -42,7 +42,7 @@
         </form>
       </div>
     </div>
-    <script src="scripts/factories/photographer.js"></script>
+    <script type="module" src="scripts/factories/photographer.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
   </body>
 </html>
