--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
       <div class="photographer_section"></div>
     </main>
 
-    <!-- <script src="scripts/utils/api.js"></script> -->
-    <!-- <script src="scripts/factories/photographers.js"></script> -->
-    <script type="module" src="scripts/pages/index.js"></script>
-    <script src="scripts/pages/photographer.js"></script>
+    <script type="module" src="scripts/pages/index.page.js"></script>
   </body>
 </html>
