--- a/photographer.html
+++ b/photographer.html
@@ -22,9 +22,7 @@
     </header>
     <main id="main">
       <div class="photograph-header">
-        <button class="contact_button" onclick="displayModal()">
-          Contactez-moi
-        </button>
+        <div class="user_header"></div>
       </div>
     </main>
     <div id="contact_modal">
@@ -42,7 +40,7 @@
         </form>
       </div>
     </div>
-    <script type="module" src="scripts/factories/photographer.js"></script>
+    <script type="module" src="scripts/pages/photographer.page.js"></script>
     <script src="/scripts/utils/contactForm.js"></script>
   </body>
 </html>
