--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="utf-8" />
 
     <link rel="icon" type="image/png" href="assets/favicon.png" />
-    <link
-      href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
+
+    <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="styles/global.css" rel="stylesheet" type="text/css" />
 
     <title>Fisheye</title>
   </head>
