--- a/photographer.html
+++ b/photographer.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8" />
+
     <link rel="icon" type="image/png" href="assets/favicon.png" />
-    <link
-      href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
-      rel="stylesheet"
-    />
+
+    <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
+    <link href="styles/global.css" rel="stylesheet" type="text/css" />
+
     <title>Fisheye - photographe</title>
   </head>
   <body>
@@ -21,16 +21,16 @@
       </a>
     </header>
     <main id="main">
-      <div class="photograph-header">
-        <div class="user_header"></div>
-      </div>
+      <section class="photograph__header"></section>
     </main>
+
     <div id="contact_modal">
       <div class="modal">
         <header>
           <h2>Contactez-moi</h2>
           <img src="assets/icons/close.svg" onclick="closeModal()" />
         </header>
+
         <form>
           <div>
             <label>Prénom</label>
