--- a/photographer.html
+++ b/photographer.html
@@ -22,6 +22,7 @@
     </header>
     <main id="main">
       <section class="photograph__header"></section>
+      <section class="photograph__media"></section>
     </main>
 
     <div id="contact_modal">
