added dynamic title and description for photographer page

--- a/photographer.html
+++ b/photographer.html
@@ -8,7 +8,7 @@
     <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/global.css" rel="stylesheet" type="text/css" />
 
-    <title>Fisheye - photographe</title>
+    <title>Fisheye - photographer</title>
   </head>
   <body>
     <header>
@@ -20,6 +20,7 @@
         />
       </a>
     </header>
+
     <main id="main">
       <section class="photograph__header"></section>
       <section class="photograph__media"></section>
