--- a/photographer.html
+++ b/photographer.html
@@ -27,6 +27,6 @@
     </main>
 
     <script type="module" src="scripts/pages/photographer.page.js"></script>
-    <script src="/scripts/utils/contactForm.js"></script>
+    <script src="/scripts/utils/modal.util.js"></script>
   </body>
 </html>
