--- a/photographer.html
+++ b/photographer.html
@@ -28,7 +28,7 @@
 
     <div id="contactModal">
       <div class="modal">
-        <header>
+        <header class="contact-form__header">
           <h2>Contactez-moi</h2>
           <h2>(name)</h2>
           <img src="assets/icons/close.svg" onclick="closeModal()" />
