--- a/photographer.html
+++ b/photographer.html
@@ -60,8 +60,8 @@
       </div>
     </div>
 
-    <script src="/scripts/utils/modal.util.js"></script>
-    <script src="/scripts/utils/contactForm.util.js"></script>
+    <script src="scripts/utils/modal.util.js"></script>
+    <script src="scripts/utils/contactForm.util.js"></script>
     <script type="module" src="scripts/pages/photographer.page.js"></script>
   </body>
 </html>
