--- a/photographer.html
+++ b/photographer.html
@@ -21,12 +21,12 @@
       </a>
     </header>
 
-    <main id="main">
+    <main id="main" aria-hidden="false">
       <section class="photograph__header"></section>
       <section class="photograph__media"></section>
     </main>
 
-    <div id="contactModal">
+    <div id="contactModal" aria-hidden="true" role="dialog">
       <div class="modal">
         <header class="contact-form__header">
           <h2>Contactez-moi</h2>
