--- a/photographer.html
+++ b/photographer.html
@@ -60,6 +60,15 @@
       </div>
     </div>
 
+    <div class="lightbox">
+      <button class="lightbox__close">Fermer</button>
+      <button class="lightbox__next">Suivant</button>
+      <button class="lightbox__prev">Précédent</button>
+      <div class="lightbox__container">
+        <img src="https://picsum.photos/id/237/900/1800" alt="" />
+      </div>
+    </div>
+
     <script src="scripts/utils/modal.util.js"></script>
     <script src="scripts/utils/contactForm.util.js"></script>
     <script type="module" src="scripts/pages/photographer.page.js"></script>
