--- a/photographer.html
+++ b/photographer.html
@@ -28,64 +28,12 @@
         <div class="custom-select__container">
           <p>Trier par :</p>
           <div class="custom-select">
-            <ul class="select">
-              <li>
-                <input
-                  class="select_close"
-                  type="radio"
-                  name="customselect"
-                  id="customselect-close"
-                  value=""
-                />
-                <span class="select_label select_label-placeholder"
-                  >Popularité</span
-                >
-              </li>
-
-              <li class="select_items">
-                <input
-                  class="select_expand"
-                  type="radio"
-                  name="customselect"
-                  id="customselect-opener"
-                />
-                <label
-                  class="select_closeLabel"
-                  for="customselect-close"
-                ></label>
-
-                <ul class="select_options">
-                  <li class="select_option">
-                    <input
-                      class="select_input"
-                      type="radio"
-                      name="customselect"
-                      id="customselect-date"
-                    />
-                    <label class="select_label" for="customselect-date"
-                      ><span class="border-top">Date</span></label
-                    >
-                  </li>
-
-                  <li class="select_option">
-                    <input
-                      class="select_input"
-                      type="radio"
-                      name="customselect"
-                      id="customselect-titre"
-                    />
-                    <label class="select_label" for="customselect-titre"
-                      ><span class="border-top">Titre</span></label
-                    >
-                  </li>
-                </ul>
-
-                <label
-                  class="select_expandLabel"
-                  for="customselect-opener"
-                ></label>
-              </li>
-            </ul>
+            <select id="sortSelector">
+              <option selected disabled></option>
+              <option>likes</option>
+              <option>title</option>
+              <option>date</option>
+            </select>
           </div>
         </div>
         <div class="media__grid"></div>
