dropdown menu styles

--- a/photographer.html
+++ b/photographer.html
@@ -26,17 +26,7 @@
       <section class="photograph__header"></section>
 
       <section class="photograph__media">
-        <div class="custom-select__container">
-          <label for="sortSelector">Trier par :</label>
-          <div class="custom-select">
-            <select id="sortSelector">
-              <option value="likes" class="option">Popularité</option>
-              <option value="title">Titre</option>
-              <option value="date">Date</option>
-            </select>
-            <span class="custom-arrow"></span>
-          </div>
-        </div>
+        <div class="dropdown-menu__container"></div>
 
         <div class="media__grid"></div>
       </section>
