--- a/photographer.html
+++ b/photographer.html
@@ -32,12 +32,29 @@
       </section>
     </main>
 
-    <div id="contactModal" aria-hidden="true" role="dialog">
+    <dialog id="contactModal"></dialog>
+
+    <!-- <dialog
+      id="contactModal"
+      role="dialog"
+      aria-labelledby="contact-form"
+      aria-describedby="Contact form"
+      aria-modal="true"
+      aria-hidden="true"
+      tabindex="-1"
+    >
       <div class="modal">
         <header class="contact-form__header">
           <h2>Contactez-moi</h2>
           <h2>(name)</h2>
-          <img src="assets/icons/close.svg" onclick="closeModal()" />
+          <button
+            class="modal__close"
+            onclick="closeModal()"
+            alt="Close"
+            aria-label="Close"
+            title="Close the modal"
+            data-dismiss="dialog"
+          ></button>
         </header>
 
         <form id="contact">
@@ -64,10 +81,10 @@
           <button class="contact_button" type="submit">Envoyer</button>
         </form>
       </div>
-    </div>
+    </dialog> -->
 
-    <script src="scripts/utils/modal.util.js"></script>
-    <script src="scripts/utils/contactForm.util.js"></script>
+    <!-- <script src="scripts/utils/modal.util.js"></script> -->
+    <!-- <script src="scripts/utils/contactForm.util.js"></script> -->
     <script type="module" src="scripts/pages/photographer.page.js"></script>
   </body>
 </html>
