--- a/photographer.html
+++ b/photographer.html
@@ -34,57 +34,8 @@
 
     <dialog id="contactModal"></dialog>
 
-    <!-- <dialog
-      id="contactModal"
-      role="dialog"
-      aria-labelledby="contact-form"
-      aria-describedby="Contact form"
-      aria-modal="true"
-      aria-hidden="true"
-      tabindex="-1"
-    >
-      <div class="modal">
-        <header class="contact-form__header">
-          <h2>Contactez-moi</h2>
-          <h2>(name)</h2>
-          <button
-            class="modal__close"
-            onclick="closeModal()"
-            alt="Close"
-            aria-label="Close"
-            title="Close the modal"
-            data-dismiss="dialog"
-          ></button>
-        </header>
-
-        <form id="contact">
-          <div class="form__data">
-            <label for="firstName">Prénom</label>
-            <input type="text" id="firstName" name="firstName" />
-          </div>
-
-          <div class="form__data">
-            <label for="lastName">Nom</label>
-            <input type="text" id="lastName" name="lastName" />
-          </div>
-
-          <div class="form__data">
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" />
-          </div>
-
-          <div class="form__data">
-            <label for="message">Votre message</label>
-            <textarea id="message" name="message" rows="5"></textarea>
-          </div>
-
-          <button class="contact_button" type="submit">Envoyer</button>
-        </form>
-      </div>
-    </dialog> -->
-
-    <!-- <script src="scripts/utils/modal.util.js"></script> -->
-    <!-- <script src="scripts/utils/contactForm.util.js"></script> -->
     <script type="module" src="scripts/pages/photographer.page.js"></script>
+    <script src="scripts/utils/modal.util.js"></script>
+    <script src="scripts/utils/contactForm.util.js"></script>
   </body>
 </html>
