--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/global.css" rel="stylesheet" type="text/css" />
 
+    <script type="module" src="scripts/pages/index.page.js" defer></script>
+
     <title>Fisheye</title>
   </head>
   <body>
@@ -24,9 +26,7 @@
     </header>
 
     <main id="main">
-      <div class="photographer_section"></div>
+      <section class="photographer_section"></section>
     </main>
-
-    <script type="module" src="scripts/pages/index.page.js"></script>
   </body>
 </html>
