class name modification

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
 
     <main id="main">
-      <section class="photographer_section"></section>
+      <section class="photographer__section"></section>
     </main>
   </body>
 </html>
