--- a/index.html
+++ b/index.html
@@ -16,11 +16,7 @@
   <body>
     <header>
       <a href="index.html">
-        <img
-          src="assets/images/logo.png"
-          class="logo"
-          alt="Fisheye Home page"
-        />
+        <img src="assets/images/logo.png" class="logo" alt="" />
       </a>
       <h1>Nos photographes</h1>
     </header>
