--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   <body>
     <header>
       <a href="index.html">
-        <img src="assets/images/logo.png" class="logo" alt="" />
+        <img
+          src="assets/images/logo.png"
+          class="logo"
+          alt="Fisheye Home page"
+        />
       </a>
       <h1>Nos photographes</h1>
     </header>
