--- a/photographer.html
+++ b/photographer.html
@@ -9,6 +9,13 @@
     <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/global.css" rel="stylesheet" type="text/css" />
 
+    <script
+      defer
+      type="module"
+      src="scripts/pages/photographer.page.js"
+    ></script>
+    <script defer src="scripts/utils/modal.util.js"></script>
+
     <title>Fisheye - photographer</title>
   </head>
   <body>
@@ -23,7 +30,7 @@
     </header>
 
     <main id="main" aria-hidden="false">
-      <section class="photograph__header"></section>
+      <section class="photographer__header"></section>
 
       <section class="photograph__media">
         <div class="dropdown-menu__container"></div>
@@ -33,8 +40,5 @@
     </main>
 
     <dialog id="contactModal"></dialog>
-
-    <script type="module" src="scripts/pages/photographer.page.js"></script>
-    <script src="scripts/utils/modal.util.js"></script>
   </body>
 </html>
