--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/global.css" rel="stylesheet" type="text/css" />
 
+    <script
+      src="https://kit.fontawesome.com/72a0969713.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="scripts/pages/index.page.js" defer></script>
 
     <title>Fisheye</title>
