--- a/photographer.html
+++ b/photographer.html
@@ -10,6 +10,10 @@
     <link href="styles/global.css" rel="stylesheet" type="text/css" />
 
     <script
+      src="https://kit.fontawesome.com/72a0969713.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
       defer
       type="module"
       src="scripts/pages/photographer.page.js"
