--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link rel="icon" type="image/ico" href="assets/images/favicon.ico" />
 
     <link href="styles/normalize.css" rel="stylesheet" type="text/css" />
     <link href="styles/global.css" rel="stylesheet" type="text/css" />
